# rust-teos

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DEPENDENCIES.md  Dockerfile  INSTALL.md  LICENSE  README.md  coffee.yml  flake.nix  rust-toolchain.toml  systemd.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yaml  cln-plugin.yaml  release.yml
contrib/init/: README.md  teosd.service
docker/: Dockerfile  README.md  dockerfile  entrypoint.sh
src/: chain_monitor.rs  lib.rs  main.rs
teos/: Cargo.toml  build.rs
teos-common/: Cargo.toml  build.rs
teos-common/proto/common/teos/v2/: appointment.proto  user.proto
teos-common/src/: appointment.rs  constants.rs  cryptography.rs  dbm.rs  errors.rs  lib.rs  net.rs  receipts.rs  ser.rs  test_utils.rs
teos-common/src/lightning/: convert.rs  messages.rs  mod.rs  ser_macros.rs  ser_utils.rs
teos-common/src/net/: http.rs  mod.rs
teos-ldk-client/: Cargo.toml  README.md
teos-ldk-client/src/: convert.rs  lib.rs  retrier.rs  ser.rs  storage.rs  wt_client.rs
teos-ldk-client/src/net/: http.rs  mod.rs
teos-ldk-client/src/storage/: dbm.rs  encryption.rs  encryptor.rs  kv.rs  memory_store.rs  mod.rs  namespace.rs  persister.rs  sql_storage.rs  storage.rs
teos/data_dir/: ca-key.pem  ca.pem  client-key.pem  client.pem  server-key.pem  server.pem  teos.toml
teos/data_dir/regtest/: teos_db.sql3
teos/migrations/: README.md
teos/migrations/postgres/: 000_init.sql
teos/migrations/sqlite/: 000_init.sql  001_datatypes_correction.sql  002_more_datatypes_corrections.sql  003_keys_rename.sql  004_locator_index.sql
teos/proto/teos/: appointment.proto  tower_services.proto  user.proto
teos/proto/teos/v2/: appointment.proto  tower_services.proto  user.proto
teos/src/: api.rs  async_listener.rs  bitcoin_cli.rs  block_processor.rs  carrier.rs  chain_monitor.rs  cli.rs  cli_config.rs  conf_template.toml  config.rs  convert.rs  dbm.rs  dbm_new.rs  errors.rs  extended_appointment.rs  fees.rs  gatekeeper.rs  lib.rs  listener_actor.rs  main.rs  proto_fmt.rs  responder.rs  rpc_errors.rs  test_utils.rs  tls.rs  tx_index.rs  watcher.rs
teos/src/api/: http.rs  internal.rs  lightning.rs  mod.rs  serde.rs  tor.rs
watchtower-plugin/: Cargo.toml  README.md
watchtower-plugin/src/: constants.rs  convert.rs  dbm.rs  lib.rs  main.rs  retrier.rs  ser.rs  test_utils.rs  wt_client.rs
watchtower-plugin/src/net/: http.rs
watchtower-plugin/tests/: conftest.py  pyproject.toml  test.py
