[package]
name = "teos-common"
version = "0.0.1"
authors = ["Sergi Delgado Segura <sergi.delgado.s@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
hex = "0.4.3"

rand = "0.8.4"
chacha20poly1305 = "0.8.0"

bitcoin = "0.27"
lightning = "0.0.99"
