[package]
name = "teos-common"
version = "0.2.0"
authors = ["Sergi Delgado Segura <sergi.delgado.s@gmail.com>"]
edition = "2018"

[features]
accountable = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# General
hex = { version = "0.4.3", features = [ "serde" ] }
prost = "0.9"
rusqlite = { version = "0.26.0", features = [ "bundled", "limits" ] }
serde = "1.0.130"
serde_json = "1.0"
tonic = "0.6"

# Crypto
rand = "0.8.4"
chacha20poly1305 = "0.8.0"

# Bitcoin and Lightning
bitcoin = { version = "0.28.0", features = [ "use-serde" ] }
lightning = "0.0.108"

[build-dependencies]
tonic-build = "0.6"