[package]
name = "teos-ldk-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
sqlite = []
kv = []

[dependencies]
# General
backoff = { version = "0.4.0", features = ["tokio"] }
hex = { version = "0.4.3", features = [ "serde" ] }
home = "0.5.3"
reqwest = { version = "0.11", features = [ "blocking", "json", "socks" ] }
log = "0.4.16"
rusqlite = { version = "0.26.0", features = [ "bundled", "limits" ] }
serde = "1.0.130"
serde_json = { version = "1.0", features = [ "preserve_order" ] }
tonic = { version = "0.11", features = [ "tls", "transport" ] }
tokio = { version = "1.5", features = [ "rt-multi-thread", "fs" ] }
bincode = "1.3.3"

# Bitcoin and Lightning
bitcoin = "0.32.0"
lightning = "0.1.0"

# Local
teos-common = { path = "../teos-common" }
chacha20poly1305 = "0.10.1"
rand = "0.9.0"

[dev-dependencies]
mockito = "0.32.4"
tempdir = "0.3.7"
