[package]
name = "rusty-teos"
version = "0.0.1"
authors = ["Sergi Delgado Segura <sergi.delgado.s@gmail.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
toml = "0.5"
structopt = "0.3"
serde = "1.0.130"
hex = "0.4.3"
base64 = "0.13.0"
futures = "0.3"
log = "0.4"
tonic = "0.6"
prost = "0.9"
prost-types = "0.9"
simple_logger = "1.12.1"
serde_json = "1.0"
rusqlite = {version = "0.26.0", features = ["bundled", "limits"]}
tokio = { version = "1.5", features = [ "io-util", "macros", "rt", "rt-multi-thread", "sync", "net", "time" ] }

bitcoin = "0.27"
lightning-block-sync = {version = "0.0.103", git = "https://github.com/rust-bitcoin/rust-lightning", branch = "main", features = [ "rpc-client" ] }
lightning-net-tokio = { version = "0.0.103", git = "https://github.com/rust-bitcoin/rust-lightning", branch = "main" }
lightning = { version = "0.0.103", git = "https://github.com/rust-bitcoin/rust-lightning", branch = "main" }
bitcoincore-rpc = "0.13.0"

teos-common = {path = "../teos-common"}

[build-dependencies]
tonic-build = "0.6"

[dev-dependencies]
rand = "0.8.4"
chunked_transfer = "1.4"
jsonrpc-http-server = "17.1.0"